--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -877,53 +877,19 @@
                                 <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="C2U-eb-63K">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dpw-vj-JAC">
                                 <rect key="frame" x="16" y="463.5" width="382" height="398.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="sectionIndexBackgroundColor" systemColor="systemGreenColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecentActivitysTableViewCell" rowHeight="64" id="KUv-Rp-5sn" customClass="RecentActivitysTableViewCell" customModule="pppppp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="382" height="64"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KUv-Rp-5sn" id="xNr-PF-mjr">
-                                            <rect key="frame" x="0.0" y="0.0" width="382" height="64"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hab-6h-E1q">
-                                                    <rect key="frame" x="33" y="22" width="125" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmx-D1-QCy">
-                                                    <rect key="frame" x="237" y="21" width="125" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <outlet property="dateLabel" destination="Hab-6h-E1q" id="YiJ-4o-i5l"/>
-                                            <outlet property="pointLabel" destination="cmx-D1-QCy" id="0AB-2J-2WW"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pQ4-Qt-Xbl"/>
                         <color key="backgroundColor" red="0.074509803921568626" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="dpw-vj-JAC" firstAttribute="top" secondItem="I5n-qt-3A2" secondAttribute="bottom" constant="4" id="0ED-HZ-BFk"/>
                             <constraint firstItem="I5n-qt-3A2" firstAttribute="top" secondItem="EDI-Ns-IuM" secondAttribute="bottom" constant="24" id="3xB-pq-JuC"/>
-                            <constraint firstItem="C2U-eb-63K" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="4sA-21-40i"/>
                             <constraint firstItem="9DF-EH-2oq" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="6Oi-Ot-xWX"/>
-                            <constraint firstItem="C2U-eb-63K" firstAttribute="bottom" secondItem="pQ4-Qt-Xbl" secondAttribute="bottom" id="7YI-T1-hUz"/>
-                            <constraint firstItem="pQ4-Qt-Xbl" firstAttribute="trailing" secondItem="C2U-eb-63K" secondAttribute="trailing" constant="16" id="9pp-KX-roU"/>
-                            <constraint firstItem="C2U-eb-63K" firstAttribute="top" secondItem="I5n-qt-3A2" secondAttribute="bottom" constant="4" id="GGC-KO-ga8"/>
+                            <constraint firstItem="dpw-vj-JAC" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="CAr-VG-Y8E"/>
                             <constraint firstItem="pQ4-Qt-Xbl" firstAttribute="trailing" secondItem="Rj1-KW-mQk" secondAttribute="trailing" constant="16" id="N9k-BL-1ka"/>
                             <constraint firstItem="PP0-OB-xz0" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="NbH-Yp-wqR"/>
                             <constraint firstItem="EDI-Ns-IuM" firstAttribute="top" secondItem="9DF-EH-2oq" secondAttribute="bottom" constant="4" id="RAt-go-5Sz"/>
@@ -931,8 +897,10 @@
                             <constraint firstItem="9DF-EH-2oq" firstAttribute="top" secondItem="Rj1-KW-mQk" secondAttribute="bottom" constant="24" id="Ri9-j2-5it"/>
                             <constraint firstItem="Rj1-KW-mQk" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="VIB-Ax-cyN"/>
                             <constraint firstItem="EDI-Ns-IuM" firstAttribute="centerX" secondItem="ncQ-X4-rmr" secondAttribute="centerX" id="bEe-Rt-cd3"/>
+                            <constraint firstItem="pQ4-Qt-Xbl" firstAttribute="trailing" secondItem="dpw-vj-JAC" secondAttribute="trailing" constant="16" id="hh1-1Q-VyE"/>
                             <constraint firstItem="PP0-OB-xz0" firstAttribute="top" secondItem="pQ4-Qt-Xbl" secondAttribute="top" constant="40" id="wlH-OW-J66"/>
                             <constraint firstItem="I5n-qt-3A2" firstAttribute="leading" secondItem="pQ4-Qt-Xbl" secondAttribute="leading" constant="16" id="zHq-K7-R7d"/>
+                            <constraint firstItem="dpw-vj-JAC" firstAttribute="bottom" secondItem="pQ4-Qt-Xbl" secondAttribute="bottom" id="zfA-5e-2Yv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -941,7 +909,7 @@
                         <outlet property="nameLabel" destination="XV6-Zr-qtR" id="5ok-bG-T7l"/>
                         <outlet property="pointLabel" destination="MMF-VO-lX0" id="vb9-od-7MV"/>
                         <outlet property="profileBackgroundView" destination="Rj1-KW-mQk" id="WVM-fA-ng4"/>
-                        <outlet property="tableView" destination="C2U-eb-63K" id="XHd-rY-5YJ"/>
+                        <outlet property="tableView" destination="dpw-vj-JAC" id="GYG-fT-diU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dvk-Kk-86h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1133,9 +1101,6 @@
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
